--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,15 @@
 	<groupId>soprajc</groupId>
 	<artifactId>Taverne-back</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-
+	
+	
 	<dependencies>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.5.7.Final</version>
+        </dependency>
+	
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
