--- a/src/main/resources/infos.properties
+++ b/src/main/resources/infos.properties
@@ -10,5 +10,5 @@ dataSource.Password=
 #Configuration hibernate dialect
 
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-hibernate.hbm2ddl.auto = update
+hibernate.hbm2ddl.auto = create
 hibernate.show_sql=false
